--- a/Stat_1.ipynb
+++ b/Stat_1.ipynb
@@ -223,7 +223,7 @@
    "metadata": {},
    "source": [
     "<h1>Weak Law Of Large Number</h1>\n",
-    "<img src=\"Screenshot from 2020-06-14 09-04-45.png\">"
+    "<img src=Imgs\"Weak_LLN.png	.png">"
    ]
   },
   {
